--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,9 @@
     "dev-windows": "nodemon ./bin/www"
   },
   "dependencies": {
-
-    "bcryptjs": "^2.4.3",
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.4",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
